# glyphsinfo-rs

./: Cargo.toml
data/: glyphdata.postcard
glyphsinfo-rs/: Cargo.toml
glyphsinfo-rs/src/: lib.rs  record.rs  xml.rs
glyphsinfo-rs/src/data/: glyphdata.postcard
src/: data.rs  lib.rs  record.rs  xml-to-postcard.rs  xml.rs
tools/: generate_data.py
xml-to-postcard/: Cargo.toml
xml-to-postcard/src/: main.rs
