[package]
name = "glyphsinfo-rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
postcard = { version = "1", default-features = false }
quick-xml = { version = "0.27", features = ["serialize"] }
serde = "1"
